--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
 
 header {
     position: absolute;
-    width: 393px;
+    width: 100%;
     height: 852px;
     left: 0px;
     top: 0px;
-    
+    margin: auto;
     background: #29182E;
 }
 
@@ -43,15 +43,15 @@ color: #F14C36;
 
 .title-text {
     position: absolute;
-width: 343px;
+width: 100%;
 height: 96px;
-left: 25px;
+left: 0px;
 top: 265px;
 
 font-family: 'Lexend Deca';
 font-style: normal;
 font-weight: 500;
-font-size: 40px;
+font-size: 35px;
 line-height: 48px;
 /* or 120% */
 
@@ -65,9 +65,9 @@ color: #F6F7F1;
 
 .title-body {
     position: absolute;
-width: 343px;
+width: 100%;
 height: 100px;
-left: 25px;
+left: 0px;
 top: 386px;
 
 font-family: 'Lexend Deca';
@@ -104,13 +104,14 @@ font-weight: 500;
 /*font-size: 20px;*/
 line-height: 20px;
 /* identical to box height, or 100% */
-
 letter-spacing: 0.15em;
 text-transform: uppercase;
-
 text-align: center;
-
 color: #F6F7F1;
+}
+
+.man {
+    display: none;
 }
 
 /* header end*/
@@ -119,7 +120,7 @@ color: #F6F7F1;
 
 .upper-middle {
 position: absolute;
-width: 393px;
+width: 100%;
 height: 852px;
 left: 0px;
 top: 852px;
@@ -127,16 +128,16 @@ top: 852px;
 background: #F6F7F1;
 }
 
-img {
+.phone {
 position: absolute;
 width: 293px;
 height: 603.34px;
-left: 50px;
+padding-left: 3rem;
 top: 44px;
 
 }
 
-h2 {
+.upper-middle-title {
     position: absolute;
 width: 343px;
 height: 60px;
@@ -157,10 +158,6 @@ flex-wrap: wrap;
 text-align: center;
 
 color: #29182E;
-}
-
-h2 span {
-    color: #F14C36;
 }
 
 .upper-middle-text {
@@ -185,7 +182,7 @@ color: #29182E;
 /* lower middle start*/
 .lower-middle {
     position: absolute;
-width: 393px;
+width: 100%;
 height: 852px;
 left: 0px;
 top: 1704px;
@@ -195,8 +192,8 @@ background: #F6F7F1;
 }
 
 .lower-title {
-    position: absolute;
-width: 343px;
+
+width: 100%;
 height: 60px;
 left: 25px;
 top: 44px;
@@ -209,146 +206,100 @@ line-height: 30px;
 text-align: center;
 letter-spacing: 0.15em;
 text-transform: uppercase;
-
 color: #29182E;
 }
 
 .key-articles {
-position: absolute;
-width: 243px;
-height: 638px;
-left: 75px;
-top: 154px;
-align-content: center;
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+padding: 0.5rem;
+align-items: center;
 }
 
-.unity-title {
-    position: absolute;
+.unity-title .uni{
     width: 243px;
     height: 176px;
-    left: 75px;
-    top: 154px;
+    text-align: center;
 }
 
 .unityh3 {
-    position: absolute;
 width: 79px;
 height: 28px;
-left: 157px;
-top: 212px;
-
+padding: 0 78px 0 78px;
 font-family: 'Lexend Deca';
 font-style: normal;
 font-weight: 500;
 font-size: 20px;
 line-height: 28px;
 /* identical to box height, or 140% */
-
 letter-spacing: 0.15em;
 text-transform: uppercase;
-
-color: #F14C36;
 }
 
 .unity-text {
-    position: absolute;
 width: 243px;
 height: 80px;
-left: 75px;
-top: 250px;
-
 font-family: 'Lexend Deca';
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 20px;
 text-align: center;
-
-color: #F14C36;
-
 }
 
 .privacy-title {
-    position: absolute;
 width: 243px;
 height: 176px;
-left: 75px;
-top: 154px;
 }
 
 .privacyh3 {
-    position: absolute;
 width: 109px;
 height: 28px;
-left: 142px;
-top: 433px;
-
+padding: 0 78px 0 78px;
 font-family: 'Lexend Deca';
 font-style: normal;
 font-weight: 500;
 font-size: 20px;
 line-height: 28px;
 /* identical to box height, or 140% */
-
 letter-spacing: 0.15em;
 text-transform: uppercase;
-
-color: #436B2C;
-
 }
 
 .privacy-text {
-    position: absolute;
 width: 243px;
 height: 80px;
-left: 75px;
-top: 471px;
-
 font-family: 'Lexend Deca';
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 20px;
 text-align: center;
-
-color: #436B2C;
 }
 
 .carity-title {
-    position: absolute;
 width: 243px;
 height: 176px;
-left: 75px;
-top: 154px;
 }
 
 .clarityh3 {
-    position: absolute;
 width: 108px;
 height: 28px;
-left: 143px;
-top: 654px;
-
+padding: 0 78px 0 78px;
 font-family: 'Lexend Deca';
 font-style: normal;
 font-weight: 500;
 font-size: 20px;
 line-height: 28px;
 /* identical to box height, or 140% */
-
 letter-spacing: 0.15em;
 text-transform: uppercase;
-
-color: #ECB20D;
 }
 
 .clarity-text {
-    position: absolute;
 width: 243px;
 height: 100px;
-left: 75px;
-top: 692px;
-
 font-family: 'Lexend Deca';
 font-style: normal;
 font-weight: 500;
@@ -357,15 +308,190 @@ line-height: 20px;
 display: flex;
 align-items: center;
 text-align: center;
-
-color: #ECB20D;
 }
 /* lower middle end*/
 
 /* footer start*/
+.footer {
+    background-color: #29182E;
+    position: absolute;
+width: 100%;
+height: 100%;
+left: 0px;
+top: 2556px;
+}
+
+#fbook {
+    position: absolute;
+width: 214px;
+height: 40px;
+left: 90px;
+top: 50px;
+border-bottom: 0px black solid;
+
+font-family: 'Lexend Deca';
+font-style: normal;
+font-weight: 500;
+font-size: 32px;
+line-height: 40px;
+/* identical to box height */
+
+display: flex;
+align-items: center;
+letter-spacing: 0.15em;
+text-transform: uppercase;
+
+color: #F14C36;
+}
+
+.useful-links {
+display: flex;
+font-family: 'Lexend Deca';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 25px;
+padding-top: 120px;
+text-align: center;
+
+/* identical to box height */
+
+display: flex;
+align-items: center;
+letter-spacing: 0.15em;
+text-transform: uppercase;
+flex-direction: column;
+color: #ECB20D;
+}
+
+.final-note .foot-note {
+
+font-family: 'Lexend Deca';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 25px;
+/* identical to box height */
+
+display: flex;
+flex-direction: column;
+justify-items: flex-end;
+align-items: center;
+letter-spacing: 0.15em;
+text-transform: uppercase;
+padding-top: 80px;
+color: #F6F7F1;
+
+}
+
+
+
 
 /* footer end*/
 
 /* media start*/
 
+@media screen and (min-width:725px) {
+    body {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
+    .header {
+    height:768px;
+    display:block;
+    
+    }
+    .nav {
+        justify-content: space-between;
+    }
+
+    .title-text {
+        width:calc(100% - 500px);
+        margin:0;
+        padding-left: 50px;
+        
+    }
+
+    .title-body {
+        width:calc(100% - 500px);
+        margin:0;
+        padding-left: 50px;
+        
+    }
+
+    .get-started {
+        display: flex;
+        position: relative;
+        left: 320px
+    }
+
+    .man {
+    display: inline-block;
+    width:500px;
+    position: relative;
+    float: right;
+    }
+
+    .upper-middle-title {
+        left: 60%;
+        text-align: right;
+        display: inline-block;
+        position: absolute;
+        top: 300px;
+        
+    }
+
+    .upper-middle-text {
+        left: 60%;
+        text-align: right;
+
+        position: absolute;
+        top: 400px;
+    }
+
+    .key-articles{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 0.5rem;
+        justify-items: center;
+    }
+
+    .lower-middle{
+        height: auto;
+    }
+
+    .lower-title {
+        display: flex;
+        flex-direction: column;
+    }
+    h3 .clar .priv .uni {
+        display: flex;
+        justify-content: space-between;
+        list-style-type: none;
+        padding: 20px 30px;
+        text-align: center;
+    }
+
+    .footer {
+        height: fit-content;
+        top: 2005px;
+    }
+
+    .useful-links ul {
+        display: flex;
+        justify-content: space-between;
+        list-style-type:none;
+        padding:20px 30px;
+
+    }
+
+    li {
+        padding-left: 40px;
+    }
+    .foot-note {
+        
+    }
+}
 /* media end*/
